# CodeVedas_SIH

./: .gitignore  README.md  package-lock.json
backend/: .envexample  Cargo.toml  InstallMongo.sh  QuickTest.sh  TestApis.sh  newCombinedSearchTest.sh
backend/csvs/: NAMC_CLEANED.csv  clean.py  clean_headers.py  fields.txt
backend/csvs/ICD-11/: .~lock.icd11_mms.csv#  fields.txt  icd11_scrapper.py  sample icd .csv - Sheet1.csv
backend/csvs/NAMASTE/: NAMC_FINAL.csv  NATIONAL AYURVEDA MORBIDITY CODES.csv
backend/src/: api.rs  main.rs  server.rs
backend/src/api/: autocomplete.rs  icd_search.rs  mod.rs  namaste_search.rs  terminology_search.rs
backend/src/codecs/: icd.rs  mod.rs  namaste.rs
backend/src/dbcodes/: mod.rs  mongo.rs  redis.rs
backend/src/gemini/: embedding.rs
frontend/: .envexample  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  Home.jsx  Router.jsx  index.css  main.jsx
frontend/src/Navbar/: Navbar.css  Navbar.jsx
frontend/src/components/Navbar/: Navbar.jsx
frontend/src/components/Results/: Results.css  Results.jsx
frontend/src/components/chatbot/: bot.css  bot.jsx  box.jsx
frontend/src/components/composer/: Composer.css  Composer.jsx  genPdf.js  genXlsx.js
frontend/src/components/globalsearch/: searchbar.css  searchbar.jsx
frontend/src/components/gobalsearch/: searchbar.css  searchbar.jsx
frontend/src/components/loader/: Starter.css  Starter.jsx
frontend/src/components/navbar/: Navbar.css  Navbar.jsx
frontend/src/login/: login.css
frontend/src/pages/: Home.jsx  fallback.js
(+7 files in other folders)
