[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
actix-web-httpauth = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.6", features = ["v4"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
mongodb = "2.7"
dotenv = "0.15"
redis = { version = "0.21", features = ["tokio-comp", "connection-manager"] } 
